# rocket-simulation

./: .env  .gitignore  .replit  DiameterStudy.py  DragStudy.py  GUIOutline.md  README.md  SimulateMotor.py  SimulateRocket.py  TelemetrumDataCalculations.csv  TimeFunctions.py  ball.py  designNotes.md  environment.py  graph.py  logger.py  motor.py  output.csv  parachute.py  presetObject.py  preset_object.py  pyproject.toml  rocket.py  simulate_rocket.py  simulation.py  test.csv  timeFunctions.py
Analysis/: AnalyzeABSOF.py  AnalyzeHTPBOF.py  ApogeeConditions.py  BestAngleByWind.py  CalibersEffect.py  DesignRocket.py  DiameterStudy.py  EvaluateRocket.py  FullMonteCarlo.py  GeneticSelectionForGoddardProblem.py  GraphCG.py  GraphPercentiles.py  MachImportance.py  MonteCarlo2MotorOutput.csv  MonteCarloMotorCompleteAnalysis.py  MotorTimeIncrement.py  OpticalAnalysisMotorMonteCarlo.py  OptimizeBurnTime.py  OptimizeDryMass.py  OptimizeExpansionRatio.py  OptimizeGrainLength.py  OptimizeOFAtPressure.py  SensitivityOxTankLength.py  SensitivityParametersWhitmoreModel.py  SensitivityToCStarEfficiency.py  SensitivityToGrainGeometry.py  SensitivityToGrainLength.py  SensitivityToOxTemperature.py  WhitmoreModelParameterImportance.py  WindMonteCarlo.py  blenderSurfaceAreaAnalysis.py  monteCarlo.py  monteCarloFlight.py  monteCarloFlightPickMotor.py  monteCarloMotor.py
Data/: convertCSVMotorToRse.py
Design/: designrocket.py
Documentation/: calculations.md  design_notes.md
Helpers/: data.py  decorators.py  dragForce.py  fluidSimulation.py  general.py  gravity.py  massProperties.py  (+8 more)
(+1433 files in other folders)
